fixed gallery vertical alignment issue

--- a/main.css
+++ b/main.css
@@ -220,11 +220,12 @@ button.nm-button:focus {
 }
 
 #gallery img {
-  margin: 15px 0;
+  margin-top: 30px;
   box-shadow: 1px 2px 5px #9c9c9c;
 }
 
 button.gl-button {
+  margin-top: 30px;
   background-color: #5585a2;
 }
 
@@ -234,11 +235,6 @@ button.gl-button:hover {
 
 button.gl-button:focus {
   outline-color: #2E4A5A;
-}
-
-#gallery .row:nth-last-child(1){
-  margin-top: 15px;
-  margin-bottom: 15px;
 }
 
 #subscribe {
